--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <div class="container">
       <div class="content">
-        <h1>About US</h1>
+        <h1>About Us</h1>
         <p>"Education for All" is a nonprofit organization founded by two high school students, Brook and Netanya. They recognized a fundamental flaw in our country's educational system: the learning methodology. This issue was starkly illustrated by the national exam scores, which boasted a mere 3% passing rate. In response, Brook and Netanya took initiative on a modest scale by creating a platform where knowledge could be freely shared among our populace — Education4All!</p>
       </div>
       <div class="content">
